@@ -1,3 +1,10 @@
+2007-12-05  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/tr1_impl/hashtable_policy.h (_Prime_rehash_policy::
+	_S_n_primes): Add.
+	(_Prime_rehash_policy::_M_next_bkt, _M_bkt_for_elements,
+	_M_need_rehash): Adjust.
+
 2007-12-03  Paolo Carlini  <pcarlini@suse.de>
 
 	* src/hashtable.cc (__prime_list): Use __SIZEOF_LONG__.
